# Harper-Compiler-Seminar

./: .gitignore  README.md
Presentations/: EBNF.md  ~$Mid Language.pptx
Transpiler/: CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.h  Lexer.h  Parser.cpp  README.md  Token.h  main.cpp  test_example.mid
TranspilerAssembly/: AST.h  CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.h  Lexer.cpp  Parser.h  README.md  main.cpp  test_example.mid
